# PyGazpar

./: CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  gitversion.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  updateVersion.py
.github/workflows/: ci.yaml  create-release.yaml  python-package.yml  python-publish-develop.yml  python-publish-release.yml  python-publish.yml
.github/workflows/python-lint/: action.yaml
.github/workflows/python-test/: action.yaml
pygazpar/: __init__.py  __main__.py  api_client.py  client.py  clientV2.py  daily_data_sample.json  datafileparser.py  datasource.py  enum.py  excelparser.py  jsonparser.py  monthly_data_sample.json  version.py  webdriverwrapper.py  webelementwrapper.py  weekly_data_sample.json
pygazpar/resources/: daily_data_sample.json  monthly_data_sample.json  weekly_data_sample.json  yearly_data_sample.json
samples/: excelSample.py  jsonSample.py  testSample.py
test/: __init__.py  test_client.py
tests/: test_api_client.py  test_client.py  test_datafileparser.py  test_datasource.py
tests/resources/: Donnees_informatives_PCE_DAILY.xlsx  Donnees_informatives_PCE_MONTHLY.xlsx  Donnees_informatives_PCE_WEEKLY.xlsx  donnees_informatives.json  donnees_publiees.json  temperatures.json
