# See documentation : https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# Full example : github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
name = pygazpar
version = attr: pygazpar.__version__
author = Stephane Senart
author_email = stephane.senart@gmail.com
description = Retrieve gas consumption from GrDF web site (French Gas Company)
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
platforms = any
license = MIT
license_files = LICENSE.md
url = https://github.com/ssenart/pygazpar
download_url = https://github.com/ssenart/pygazpar/releases
project_urls =
    Home = https://github.com/ssenart/pygazpar
    Source = https://github.com/ssenart/pygazpar
    Issues = https://github.com/ssenart/PyGazpar/issues
    Changelog = https://github.com/ssenart/PyGazpar/blob/master/CHANGELOG.md
    Download = "https://pypi.org/project/pygazpar/#files"
keywords = Energy, Natural Gas, Meter, GrDF, Gazpar
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8            

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
install_requires =
    selenium == 3.141
    openpyxl == 2.6.3

[options.entry_points]
console_scripts =
    pygazpar = pygazpar.__main__:main

[bdist_wheel]
universal = True
plat-name = any
python-tag = cp38
