# See documentation : https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# Full example : github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
name = pygazpar
version = attr: pygazpar.__version__
author = Stephane Senart
author_email = stephane.senart@gmail.com
description = Retrieve gas consumption from GrDF web site (French Gas Company)
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
platforms = any
license = MIT
license_files = LICENSE.md
url = https://github.com/ssenart/pygazpar
download_url = https://github.com/ssenart/pygazpar/releases
project_urls =
    Home = https://github.com/ssenart/pygazpar
    Source = https://github.com/ssenart/pygazpar
    Issues = https://github.com/ssenart/PyGazpar/issues
    Changelog = https://github.com/ssenart/PyGazpar/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/pygazpar
keywords = Energy, Natural Gas, Meter, GrDF, Gazpar
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8    
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11       
    Programming Language :: Python :: 3.12
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    openpyxl >= 2.6.3
    requests >= 2.26.0
    pandas

[options.entry_points]
console_scripts =
    pygazpar = pygazpar.__main__:main

[bdist_wheel]
universal = False
plat-name = any
python-tag = py37
